@@ -1,6 +1,8 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
 
+- minor fixes of PAT repacker
+- repack and send every PAT packet we receive
 - fixed null pointer in server.c when cConnection::Accept() failes
 - consider Pids from channels.conf when HTTP TS streaming. Section filtering
   is an optional feature for VDR devices, so we must not rely on the PMT
